fix: regenerate docs after refactoring
