# infra/controller/invoice.go
@@ -27,7 +27,7 @@ func BuildInvoiceController() *InvoiceController {
 // @Param p query int false "Page to fetch, given a number of items per page" minimum(1) default(1)
 // @Param filter query string false "Filter results by one or more of comma-separated queries. A query has the following structure: [filter_name]:[value]. Possible filters are: Reference Year = value (reference_year:value), Reference Month = value (reference_month:value) and Document contains value (document:value). Queries are inclusive."
 // @Param sort query string false "Sort results by one or more of comma-separated sort items. A sort item has the sort field name, followed by (optionally) a boolean indicating if the sort is in descending order. Sort items have the following structure: [sort_name]:[descending]. Possible sort fields are: Reference Year (reference_year:bool), Reference Month (reference_month:bool) and Document (document:bool). Sorts are inclusive."
-// @Success 200 {object} getManyResult "Returns an object containing the array of Invoices found, among an integer indicating the total number of items for the query made."
+// @Success 200 {object} handler.InvoiceGetManyResult "Returns an object containing the array of Invoices found, among an integer indicating the total number of items for the query made."
 // @Failure 400 {string} string "Indicates a failure when parsing query params, or a itemsperpage query param greater than max value"
 // @Failure 401 {string} string "Indicates that no authorization info was provided, or authorization is invalid."
 // @Failure 500 {string} string "Indicates an error that was not handled by the server"
